--- a/report/report.Rmd
+++ b/report/report.Rmd
@@ -48,7 +48,7 @@ However, This may be misleading. Simply fitting a separate linear regression mod
 Therefore, we are going to use the multiple linear regression method, and regress Sales on all three of the predictors TV, Radio and Newspaper. The coefficients for this model is listed below.
 
 ```{r,results = 'asis', echo=FALSE}
-print(xtable(summary(regression),caption="Multiple Linear Regression Coefficients"),comment=False)
+print(xtable(summary(regression),caption="Multiple Linear Regression Coefficients"),comment=FALSE)
 ```
 
 Looking at this table, we can see that for a given amount of Radio and Newspaper ad budgets, an increase in TV budget by $1,000 can yield an increase in sales by 46 units. Similarly, an increase in Radio budget will yield an increase in sales by 189 units. The t-statistics for TV and Radio predictors are both quite high. However, we can notice that the Newspaper budget predictor has close to 0 effect on sales, and the t-statistics is really low. This seems interesting as in the previous simple linear regression of sales on newspaper, we see a pretty significant effect. Let's see why this may be the case.
